# dogalert

./: .copy_env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker_clear.sh  mypy.ini  pyproject.toml  run_all.sh  wait_for_it.sh
.github/workflows/: linters.yml  pytest.yml
docs/: DEVLOGS.md
docs/architecture/: C4 model.drawio
nginx/: nginx-vps.conf  nginx.conf
src/: app.py
src/bot/: create_bot.py
src/bot/handlers/: notification.py  start.py  tg_initData.js
src/broker/: consumer.py  producer.py
src/celery_app/: __init__.py  beat_schedule.py  config.py  reminder_tasks.py  separate_tg_bot.py  sync_database.py
src/config/: config.py  db_settings.py  logger.py
src/database/: association_tables.py  config.py  db_session.py  pet.py  report.py  user.py
src/database/alembic/: env.py
src/database/alembic/versions/: 2025_04_01_0128-4c196dfcf07e_initial_migration.py  2025_04_18_1517-7e865148d30e_add_timezone_to_datetime_fields_in_pet_.py  2025_04_18_1549-27148388ab47_add_timezone_to_datetime_fields_in_user_.py  2025_04_18_1715-46c1d7c38e5d_fix_pet_petphoto_relationship_ondelete_.py  2025_04_18_1734-2bc8822707e7_add_timezone_to_datetime_fields_in_.py  2025_04_27_2033-2074c1438361_add_user_state_field.py  2025_05_06_1744-8501a4822a1d_add_lake_postgis.py  2025_05_07_1928-830da0adb079_add_geolocation_in_postgis.py  2025_05_07_1946-64624459ed6e_remove_location_fields_from_user_report_.py  2025_05_11_0132-7321cb77045f_change_geometry_to_geography_to_.py  2025_05_17_0130-0f05d578b506_add_notification_model.py  2025_05_23_1859-e9a8cb911f66_upd_notification_model_to_add_.py  2025_05_23_2008-4a0ff436d00b_add_telegram_photo_to_user_db_model.py  2025_06_03_0114-58a04e181609_add_celery_reminder_tasks_ids_to_pet_.py  2025_06_06_0122-1cc4b59ad90e_save_pets_reports_after_user_deleting_.py
src/database/management/: fill_db_pet.py  fill_db_report.py  fill_db_user.py  pet_data.py
src/database/models/: __init__.py  association_tables.py  base_model.py  geo.py  map.py  notification.py  pet.py  report.py  user.py
src/fastapi/: main.py
src/fastapi/dependencies/: get_user_id_cookie.py  telegram_auth.py  telegram_user_data.py
src/fastapi/routers/: pets.py  reports.py  users.py
src/fastapi/routers/api/: reports.py
src/fastapi/routers/views/: auth.py  main.py  menu.py  other.py  register.py
src/fastapi/static/css/: footer.css  telegram-theme.css
src/fastapi/static/js/: backButtonController.js  footer_active_links.js  localStorage.js  tg_initData.js
src/fastapi/templates/: agreement.html  base.html  index.html  no_telegram_login.html  profile.html  registration.html  registration_done.html  reports.html  something_goes_wrong.html  users.html
src/fastapi/templates/components/: footer.html  footer_for_agreement.html
src/fastapi/templates/menu/: health.html  profile.html  reminders.html
src/fastapi/templates/register/: reg_pet.html  registration.html
src/schemas/: __init__.py  geo.py  map.py  notification.py  pet.py  report.py  telegram.py  user.py
src/services/: geo_service.py  map_service.py  notification_service.py  pet_photo_service.py  pet_serice.py  pet_service.py  reminder_service.py  report_photo_service.py  report_service.py  user_service.py  user_state_service.py
src/web/: main.py
src/web/dependencies/: calculate_health_days.py  city_from_geo.py  city_geo_handles.py  date_format.py  date_parsing.py  extract_nearest_report_data.py  get_data_from_cookie.py  get_user_from_cookie.py  get_user_id_cookie.py  notification_content_handles.py  photo_from_telegram.py  telegram_auth.py  telegram_user_data.py
src/web/routers/api/: geo.py  notifications.py  pets.py  reports.py  users.py
src/web/routers/views/: auth.py  geo.py  health.py  map.py  menu.py  notification.py  other.py  pet_router.py  register.py  report_router.py  user_router.py
src/web/static/city/: ru_cities.py
src/web/static/css/: add-pet.css  footer.css  telegram-theme.css
src/web/static/js/: addPet.js  addReport.js  backButtonController.js  deletePet.js  deleteReport.js  filterReports.js  petRegister.js  requestLocation.js  tg_Theme.js  tg_initData.js  tg_poolingbot_initData.js  updateFilterType.js  updateHealthPet.js  (+5 more)
src/web/templates/: agreement.html  base.html  index.html  users.html
(+38 files in other folders)
