[tool.poetry]
name = "dog-alert"
version = "0.1.0"
description = "Telegram bot for finding lost pets with geolocation notifications"
authors = ["artyombn <balabashinan@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.19.0"
fastapi = {extras = ["standard"], version = "^0.115.12"}
sqlalchemy = "^2.0.39"
alembic = "^1.15.1"
pydantic-settings = "^2.8.1"
uvicorn = "^0.34.0"
pydantic = ">=2.4.1,<2.11"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
pytest-asyncio = "^0.26.0"
aiosqlite = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.2"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
target-version = "py311"
select = ["E", "W", "F", "I", "D", "UP", "Q", "COM", "ANN", "TC", "ASYNC", "FURB"]
#select = ["E", "W", "F", "I", "FAST", "NPY", "PD", "S", "D", "UP", "Q", "COM", "ANN", "TC", "ASYNC", "FURB"]
ignore = []
fix = false

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true