[tool.poetry]
name = "dog-alert"
version = "0.1.0"
description = "Telegram bot for finding lost pets with geolocation notifications"
authors = ["artyombn <balabashinan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
aiogram = "^3.19.0"
fastapi = {extras = ["standard"], version = "^0.115.12"}
sqlalchemy = "^2.0.39"
alembic = "^1.15.1"
pydantic-settings = "^2.8.1"
uvicorn = "^0.34.0"
pydantic = ">=2.4.1,<2.11"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
pytest-asyncio = "^0.26.0"
aiosqlite = "^0.21.0"
pydantic-extra-types = "^2.10.3"
phonenumbers = "^9.0.3"
faker = "^37.1.0"
websockets = "^15.0.1"
babel = "^2.17.0"
geoalchemy2 = "^0.17.1"
pika-stubs = "^0.1.3"
aio-pika = "^9.5.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.2"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "W", "F", "I", "D", "UP", "Q", "COM", "ANN", "TC", "ASYNC", "FURB"]
#lint.select = ["E", "W", "F", "I", "FAST", "NPY", "PD", "S", "D", "UP", "Q", "COM", "ANN", "TC", "ASYNC", "FURB"]
lint.ignore = [
    "D104", # docstring in public package
    "D100", # docstring in public module
    "D103", # docstring in public function
    "D101", # docstring in public class
    "D102", # docstring in public method
    "D105", # docstring in magic method
    "D200", # One-line docstring should fit on one line
    "D400", # First line should end with a period
    "D415",
    "D203", # no-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D106", # docstring in public nested class

]
fix = false
exclude = [
    "tests/*",
    "src/database/alembic/*",
    "src/fastapi/main.py",
    "src/schemas/__init__.py",
]

[tool.ruff.lint.per-file-ignores]
"src/schemas/pet.py" = ["TC003"]
"src/schemas/report.py" = ["TC003"]
"src/schemas/user.py" = ["TC003", "TC002"]
"src/database/models/pet.py" = ["UP"]
"src/database/models/report.py" = ["UP"]
"src/database/models/user.py" = ["UP"]
"src/database/models/notification.py" = ["UP"]
"src/schemas/geo.py" = ["TC001"]
"src/web/dependencies/photo_from_telegram.py" = ["UP041"]
"src/web/dependencies/city_geo_handles.py" = ["UP041"]
"src/schemas/notification.py" = ["TC003"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true